# ai-in-web

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: celery_app.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py
backend/app/ml/: generator.py
backend/app/routers/: generate.py  health.py  history.py
frontend/: Dockerfile  app.py  pyproject.toml
grafana/: prometheus.yml
grafana/provisioning/dashboards/: dashboard.yml  main_dashboard.json
grafana/provisioning/datasources/: prometheus.yml
nginx/: Dockerfile  nginx.conf
